@@ -1,2 +1,2 @@
-EBUILD cl-desktop-meta-10.8.81.ebuild 1602 RMD160 9412d00be9039c7b99ba014622f949475ff99068 SHA1 625394c7d8726103372f8e7bfde34ff6c69708e1 SHA256 3d14ae3bad8be28cfb3a56017d127aa22addd2f272145155733a5c18a0a724f7
-MISC ChangeLog 739 RMD160 20ccd38a2217261c14f6f608889bd171c51bf4a9 SHA1 df63f507741dbd92ab3753bcab3caa3f793c38ba SHA256 6783212ea13126c59b30fda772ab7cd2a939d150ddd5e006c06e83d0d136a44a
+EBUILD cl-desktop-meta-10.8.81.ebuild 1659 RMD160 b557d17afdf0d43684e294f1d2150343b9f97872 SHA1 67be87b20e3c5b144e359a06c2a95b396297f4dd SHA256 e6e5b985c21a38bf82f082607a0d7de5256f8dbb1006f2b02559e45ca87c7300
+MISC ChangeLog 885 RMD160 95a0feda245bad143f1dcbc9b4c6fbf010613487 SHA1 9537dd464a663734c5ed59298596762ed489fbc0 SHA256 96c93394701aefc6dbc82738bca98fd87c3f0b9de8ec653789cbd54e50992b2c
