@@ -1,4 +1,4 @@
 EBUILD cls-meta-10.4-r1.ebuild 2988 RMD160 042f931c6c1afa6103025275446336173aa70c10 SHA1 f830308a94db322d963c22a5100c8da049a31b44 SHA256 f763b6e9b07c0344b2baf7606944e4ec55d151adc5d85e354f37d5672b2aaa30
-EBUILD cls-meta-10.8.81.ebuild 1425 RMD160 83d07f14df787b9846fe1c031dcbdb6b78630d33 SHA1 bdad50cc189f77f458e0521702fd12cef3966b60 SHA256 2ba2efbc4cfcf6c525712181868388ff2047e24440582dc3e0053c5327b1ff7e
-MISC ChangeLog 1729 RMD160 cf1992266c06f58652ffa33c778e617a4fd23819 SHA1 30acb5a8cafd3382301a7b523106319231b0e383 SHA256 11118610f96dcdda5c50a1b41b205be1d787b3ec6945ee872fba2bdf6fb44622
+EBUILD cls-meta-10.8.81.ebuild 1400 RMD160 5f0e32b36a2a9e3d49e81c181ef695a5cf8de5a2 SHA1 377a00b31486766bc1597aa6c601db0c4cd5a2d9 SHA256 8ead9bc8b125d0b4555fadb05594333c00a003196d7bba9cb57c12fe42e11dca
+MISC ChangeLog 1873 RMD160 c040850734fd8908ae88f014168450af895255c7 SHA1 dc281f0fc024a6b6836a1f1339592873ae9f6a3a SHA256 333d33465c02814efe0a6ebb28b8587d1133407577cf6b2267dd1c9fc7b92563
 MISC metadata.xml 257 RMD160 ba1d3308ea944e3f4e2d6c968edfc6abbc32261e SHA1 557e2138324d0aa8db3a282eeeadc88f5b061408 SHA256 6e5c9e82d9d3bdd7855fde47d4d5edaec61251e84a271bd08e64f17008d3e07a
