@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  20 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  cls-meta-10.8.81.ebuild:
+  Moved www-plugins/adobe-flash to cl-desktop-meta
+
 *cls-meta-10.8.81 (13 Aug 2010)
 
   13 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
