@@ -4,6 +4,10 @@
 
   20 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
   cl-desktop-meta-10.8.81.ebuild:
+  Moved www-plugins/adobe-flash from cls-meta
+
+  20 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  cl-desktop-meta-10.8.81.ebuild:
   Added vim from cl-useful-meta
 
 *cl-desktop-meta-10.8.81 (13 Aug 2010)
